[gd_scene load_steps=2 format=3 uid="uid://b7ltwaqd3smga"]

[ext_resource type="Script" uid="uid://duxw332qdfkqs" path="res://Scripts/try.gd" id="1_jvpr5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvpr5")

[node name="PasswordLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 521.0
offset_top = 87.0
offset_right = 561.0
offset_bottom = 110.0

[node name="StrongButton" type="Button" parent="."]
layout_mode = 0
offset_left = 678.0
offset_top = 521.0
offset_right = 816.0
offset_bottom = 552.0
text = "Strong Password"

[node name="WeakButton" type="Button" parent="."]
layout_mode = 0
offset_left = 357.0
offset_top = 521.0
offset_right = 487.0
offset_bottom = 552.0
text = "Weak Password"

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 556.0
offset_top = 289.0
offset_right = 596.0
offset_bottom = 312.0

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 548.0
offset_top = 237.0
offset_right = 588.0
offset_bottom = 260.0

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 563.0
offset_top = 285.0
offset_right = 603.0
offset_bottom = 308.0

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="StrongButton" to="." method="_on_strong_button_pressed"]
[connection signal="pressed" from="WeakButton" to="." method="_on_weak_button_pressed"]
